--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc://localhost:3306/lagoon
+spring.datasource.url=jdbc:mysql://localhost:3306/lagoon
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.dbcp2.test-while-idle=true
